Changed PurchaseReques model and docs
