# swagger.yaml
@@ -4,6 +4,7 @@ info:
   description: API para un servicio de compra y venta de videojuegos de segunda mano.
   version: 1.0.0
 servers:
+  - url: 'http://localhost:4001/v1'
   - url: 'https://twolifes.herokuapp.com/v1'
 tags:
   - name: Usuarios
@@ -354,6 +355,60 @@ paths:
       tags:
         - Anuncios
       summary: Obtener todos los anuncios de la base de datos.
+      parameters:
+        - name: videogame
+          in: query
+          type: string
+          description: Filtrar por id videojuego
+          example: videogame=d464fyde35686
+          required: false
+        - name: advertiser
+          in: query
+          type: string
+          description: Filtrar por id del anunciante
+          example: advertiser=d464fyde35686
+          required: false
+        - name: _advertiser
+          in: query
+          type: string
+          description: Filtrar todos los anuncios que no le pertenencen al id de anunciante
+          example: _advertiser=d464fyde35686
+          required: false
+        - name: platform
+          in: query
+          type: string
+          description: Filtrar por id de  platforma
+          example: platform=d464fyde35686
+          required: false
+        - name: price
+          in: query
+          type: string
+          description: Filtrar por precio de anuncio
+          example: 'price=[23 (mayor o igual a 23), price=23] (menor o igual a 23), price=[23,70] (entre 23 y 70)'
+          required: false
+        - name: status
+          in: query
+          type: string
+          description: Filtrar por status de anuncio
+          example: status=En venta
+          required: false
+        - name: populate
+          in: query
+          type: string
+          description: Hacer join / Traer informacion de foreign key del valor de parametro (puede recibir uno o mas parametros entre corchetes y separados por coma)
+          example: 'populate=[videogame,advertiser,platform]'
+          required: false
+        - name: orderBy
+          in: query
+          type: string
+          description: 'Ordenar registros (sintaxis orderby=[parametro a ordenar,tipo de orden]  )'
+          example: 'orderBy=[price,asc] orderBy=[price,desc]'
+          required: false
+        - - name: limit
+            in: query
+            description: traer cierto numero de registros
+            example: limit=50
+            type: string
       responses:
         '200':
           description: (OK) Array de anuncios.
@@ -436,7 +491,7 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/ServerError'
-  /purchaseRequests:
+  /purchaserequests:
     post:
       tags:
         - Solicitudes
@@ -464,6 +519,57 @@ paths:
       tags:
         - Solicitudes
       summary: Obtener todas las solicitudes.
+      parameters:
+        - name: ad
+          in: query
+          type: string
+          description: Filtrar por id de anuncio
+          example: 614e49d025f7c2aec834fd81
+          required: false
+        - name: user
+          in: query
+          type: string
+          description: Filtrar por ID del usuario ("Mis solicitudes")
+          example: 614e2140de8d8a97ef00b022
+          required: false
+        - name: deliveryDate
+          in: query
+          description: Filtrar por deliveryDate de la solicitud
+          schema:
+            anyOf:
+              - type: string
+                pattern: '^=\[\d{2}-\d{2}-\d{4}$'
+              - type: string
+                pattern: '^=\d{2}-\d{2}-\d{4}\]$'
+              - type: string
+                pattern: '^=\[\d{2}-\d{2}-\d{4},\d{2}-\d{2}-\d{4}\]$'
+          example: 'deliveryDate=[23-12-2014'
+          required: false
+        - name: status
+          in: query
+          type: string
+          description: Filtrar por status de la solicitud
+          example: Aceptada
+          required: false
+        - name: populate
+          in: query
+          type: string
+          description: Hacer join / Traer informacion de foreign key del valor de parametro (puede recibir uno o mas parametros entre corchetes y separados por coma)
+          example:
+            - user
+            - advertiser
+          required: false
+        - name: orderBy
+          in: query
+          description: 'Ordenar registros (sintaxis orderby=[parametro a ordenar,tipo de orden]  )'
+          schema:
+            type: string
+            patter: '^orderby=\[(status|deliveryDate),(asc|desc)]$'
+          example:
+            - deliveryDate
+            - asc
+          required: false
+        - $ref: '#/paths/~1ads/get/parameters/8'
       responses:
         '200':
           description: (OK) Array de solicitudes.
@@ -477,7 +583,7 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/ServerError'
-  '/purchaseRequests/{id}':
+  '/purchaserequests/{id}':
     get:
       tags:
         - Solicitudes
@@ -921,38 +1027,38 @@ components:
           description: Estado del anuncio
     PurchaseRequestsBody:
       type: object
+      required:
+        - idAd
+        - idRequester
+        - status
       properties:
         idAd:
-          type: string
           description: ID del anuncio
+          type: string
+          example: 61877464e7e0e20016366c6d
         idRequester:
-          type: string
           description: ID del solicitante
-        date:
           type: string
-          description: Fecha de la solicitud
+          example: 61877464e7e0e20016366c6d
         status:
+          description: 'Estado de la solicitud (al crear una solicitud, el status siempre debe ser "En espera")'
           type: string
-          enum:
-            - Aceptada
-            - Rechazada
-            - Pendiente
-          description: Estado de la solicitud
+          default: En espera
     PurchaseRequestsPublicData:
       type: object
       properties:
         _id:
           type: string
           description: ID de la solicitud
+          example: 61877464e7e0e20016366c6d
         idAd:
           type: string
           description: ID del anuncio
+          example: 61877464e7e0e20016366c6d
         idRequester:
           type: string
           description: ID del solicitante
-        date:
-          type: string
-          description: Fecha de la solicitud
+          example: 61877464e7e0e20016366c6d
         status:
           type: string
           enum:
@@ -960,9 +1066,10 @@ components:
             - Rechazada
             - Pendiente
           description: Estado de la solicitud
-        dateReceived:
+        deliveryDate:
           type: string
-          description: Fecha en que se recibió el juego
+          description: Fecha en que se recibió el juego (si ya se concretó la venta)
+          example: 2008-10-12T00:00:00.000Z
     PlatformsPostBody:
       type: object
       required:
